# Web-Scraping

./: .gitignore  main.py  pyproject.toml  pyvenv.cfg
Scripts/: activate  activate.bat  activate.fish  activate.nu  dul-receive-pack  dul-upload-pack
core/: base_store.py  online_store.py
logic/: product_aggregator.py
models/: product.py  quantity_extractor.py
scarpers/: base_scraper.py  rami_levy_scraper.py  selenium_trial.py  selenium_trial_2.py  shufersal_scraper.py  shukcity_scraper.py  victory_scarper.py  victory_scraper.py  ybitan_scraper.py  zap_market.py
scrapers/: shufersal_scraper.py  shukcity_scraper.py
selenium/: shopping_bot.py  zap_market.py
stores/: rami_levy_store.py  shufersal_store.py
test/: test_rami_levi_scraper.py  test_shufersal.py  test_victory.py  test_zap_market.py
